force-app/main/default/objects/Available_Seat__c/Available_Seat__c.object-meta.xml
<CustomObject>
    <label>Available Seat</label>
    <nameField>
        <label>Available Seat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Seats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>