force-app/main/default/objects/Available_Seat__c/fields/AvailableSeat__c.field-meta.xml
<CustomField>
    <fullName>AvailableSeat__c</fullName>
    <label>AvailableSeat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>