force-app/main/default/objects/Available_Seat__c/fields/BookedSeat__c.field-meta.xml
<CustomField>
    <fullName>BookedSeat__c</fullName>
    <label>BookedSeat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>