force-app/main/default/objects/Available_Seat__c/fields/ShowTime__c.field-meta.xml
<CustomField>
    <fullName>ShowTime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShowTime</label>
    <referenceTo>ShowTime__c</referenceTo>
    <relationshipLabel>Available Seats</relationshipLabel>
    <relationshipName>Available_Seats</relationshipName>
    <type>Lookup</type>
</CustomField>