force-app/main/default/objects/Available_Seat__c/fields/TotalSeat__c.field-meta.xml
<CustomField>
    <fullName>TotalSeat__c</fullName>
    <label>TotalSeat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>