force-app/main/default/objects/Available_Seat__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>VVIP</fullName>
            </value>
            <value>
                <fullName>Couple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>